# PiBox5

./: README.md  plan-pibox5Backend.prompt.md  pyproject.toml  requirements.txt
backend/: .htaccess  README.md  config.php  gallery.php  index.html  index.php  upload.php
backend/api/: photos.php
backend/uploads/: .gitkeep  .htaccess
pibox5/: __init__.py  app.py  main.py
pibox5/camera/: __init__.py  base.py  dummy_camera.py  gphoto2_camera.py
pibox5/config/: __init__.py  defaults.yaml  settings.py
pibox5/ui/: __init__.py  main_window.py
pibox5/ui/screens/: __init__.py  countdown_screen.py  idle_screen.py  review_screen.py  settings_screen.py
pibox5/ui/themes/: dark.qss  default.qss
pibox5/ui/widgets/: __init__.py  live_preview.py  photo_button.py
pibox5/upload/: __init__.py  http_upload.py
scripts/: install.sh
